Update and rename Gallery-Style.css to style.css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+//safal css start
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//safal css end
+
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 
 *,
